@@ -31,7 +31,7 @@ BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 # $RPM_OPT_FLAGS should be loaded from cmake macro.
 
 %cmake @RPM_SPEC_CMAKE_FLAGS@ .
-%__make VERBOSE=1  %{?_smp_mflags}
+%__make @RPM_SPEC_MAKE_FLAGS@
 @RPM_SPEC_POST_BUILD_SECTION_OUTPUT@
 
 %install
